--- a/src/week5/layered-architecture/src/main/resources/application.yml
+++ b/src/week5/layered-architecture/src/main/resources/application.yml
@@ -2,3 +2,15 @@ server:
   error:
     include-exception: false
     include-stacktrace: on_param
+
+  servlet:
+    encoding:
+      charset: UTF-8
+      force: true
+
+
+
+
+
+
+
